tests/ui/lint/snapshots/out_of_domain_rune_escape_domain.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Out-of-domain value
    ╭─[test.lis:13:14]
 12 │ fn main() {
 13 │   let _ = at('\b')
    ·              ──┬─
    ·                ╰── out of domain
 14 │   fmt.Println(BEL, TAB)
    ╰────
  help: `R` has a closed domain (`BEL='\a', TAB='\t'`) that excludes this value · code: [lint.out_of_domain_value]
