tests/ui/lint/snapshots/oversized_shift_byte.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Shift amount exceeds integer width
   ╭─[test.lis:4:11]
 3 │   let x: byte = 1
 4 │   let _ = x << 8
   ·           ───┬──
   ·              ╰── shift exceeds width
 5 │ }
   ╰────
  help: `byte` is 8 bits wide, so shifting by 8 discards every bit of the value · code: [infer.oversized_shift]
