tests/ui/lint/snapshots/oversized_shift_int64_right.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Shift amount exceeds integer width
   ╭─[test.lis:4:11]
 3 │   let x: int64 = 1
 4 │   let _ = x >> 64
   ·           ───┬───
   ·              ╰── shift exceeds width
 5 │ }
   ╰────
  help: `int64` is 64 bits wide, so shifting by 64 discards every bit of the value · code: [infer.oversized_shift]
