tests/ui/lint/snapshots/oversized_shift_int8_at_width.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Shift amount exceeds integer width
   ╭─[test.lis:4:11]
 3 │   let x: int8 = 1
 4 │   let _ = x << 8
   ·           ───┬──
   ·              ╰── shift exceeds width
 5 │ }
   ╰────
  help: `int8` is 8 bits wide, so shifting by 8 discards every bit of the value · code: [infer.oversized_shift]
